--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <td><a href="https://github.com/Santhosh071/user.git">Link5</a></td>
             </tr>
             <tr>
-                <td>Task6</td>
+                <td>PORTFLIO</td>
                 <td><a href="./js6.html">Link6</a></td>
                 <td><a href="./js6.html">Link6</a></td>
             </tr>            
